Attribure -binding added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,11 @@
 
+<app-two-way-data-binding></app-two-way-data-binding>
+<hr>
+<hr>
+<app-attribute-binding></app-attribute-binding>
 
+<hr>
+<hr>
 <app-interpolation-demo></app-interpolation-demo>
 <hr>
 <app-property-binding></app-property-binding>
